Added base for settings and logic to rebind input keys

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -582,4 +582,60 @@ list=[{
 "is_tool": true,
 "language": &"GDScript",
 "path": "res://addons/dialogic/Modules/WaitInput/event_wait_input.gd"
+}, {
+"base": &"Control",
+"class": &"HotkeyRebindButton",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Menus/Settings Menu/hotkey_rebind_button.gd"
+}, {
+"base": &"Control",
+"class": &"MainMenu",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Menus/Main Menu/main_menu.gd"
+}, {
+"base": &"Control",
+"class": &"SettingsMenu",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Menus/Settings Menu/settings_menu.gd"
+}, {
+"base": &"EditorDebuggerPlugin",
+"class": &"SignalLensDebugger",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/signal_lens/debugger/signal_lens_debugger.gd"
+}, {
+"base": &"Control",
+"class": &"SignalLensEditorPanel",
+"icon": "",
+"is_abstract": false,
+"is_tool": true,
+"language": &"GDScript",
+"path": "res://addons/signal_lens/editor/signal_lens_editor_panel.gd"
+}, {
+"base": &"GraphNode",
+"class": &"SignalLensGraphNode",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/signal_lens/editor/signal_lens_graph_node.gd"
+}, {
+"base": &"EditorInspectorPlugin",
+"class": &"SignalLensRemoteNodeInspector",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/signal_lens/inspector/signal_lens_remote_node_inspector.gd"
 }]
