--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -12,6 +12,7 @@ scenes=["res://Menus/Settings Menu/hotkey_rebind_button.tscn", "res://Menus/Main
 
 create_new_node=Rect2(460, 201, 900, 700)
 project_settings=Rect2(360, 190, 1200, 700)
+export=Rect2(510, 290, 900, 574)
 
 [color_picker]
 
