--- a/.github/workflows/github_to_itch.yml
+++ b/.github/workflows/github_to_itch.yml
@@ -48,6 +48,11 @@ jobs:
      mkdir -p ~/.local/share/godot/export_templates/4.4.1.stable
      mv ./templates/* ~/.local/share/godot/export_templates/4.4.1.stable
   
+  - name: Export Windows Desktop
+    run: |
+     mkdir -p ./dist
+     ./godot --headless --path ./ --export-release "Windows Desktop" ./dist/Decks & Diesel.exe
+    
 
   - uses: actions/upload-artifact@v2
     with:
@@ -127,6 +132,9 @@ jobs:
     
     - name: Login To Butler
       run: ./butler login
+    
+    - name: Push Windows Desktop to Itch
+      run: ./butler push ./dist wolfquery/decks-and-diesel:win --userversion-file ./VERSION/VERSION.txt
     
 
  Cleanup:
